basic media controller written

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "datasets>=3.2.0",
     "numpy>=2.0.2",
     "pydub>=0.25.1",
+    "pynput>=1.7.7",
     "scipy>=1.15.1",
     "sounddevice>=0.5.1",
     "soundfile>=0.13.0",
