--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "datasets>=3.2.0",
     "numpy>=2.0.2",
+    "pyaudio>=0.2.14",
     "pydub>=0.25.1",
     "pynput>=1.7.7",
     "scipy>=1.15.1",
