--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "numpy>=2.0.2",
     "pyaudio>=0.2.14",
     "pydub>=0.25.1",
+    "pyinstaller>=6.11.1",
     "pynput>=1.7.7",
     "scipy>=1.15.1",
     "sounddevice>=0.5.1",
