--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pydub>=0.25.1",
     "pyinstaller>=6.11.1",
     "pynput>=1.7.7",
+    "pystray>=0.19.5",
     "scipy>=1.15.1",
     "sounddevice>=0.5.1",
     "soundfile>=0.13.0",
